--- a/explore_img.html
+++ b/explore_img.html
@@ -26,12 +26,15 @@
 
         <div id="nft-marker1-info" class="info-pane" >
             <h1>Fill in some info about this location.</h1>
+            Old main is the building of old main at asu 
         </div>
         <div id="nft-marker2-info" class="info-pane">
             <h1>Fill in some info about this location.</h1>
+            hayden library is where alot of students go to study and do their homework
         </div>
         <div id="nft-marker3-info" class="info-pane">
             <h1>Fill in some info about this location.</h1>
+            ASU Gammage is a building that I have never been too.
         </div>
 
         <!-- Fill in the content ABOVE this line -->
