--- a/explore_img.html
+++ b/explore_img.html
@@ -26,7 +26,7 @@
 
         <div id="nft-marker1-info" class="info-pane" >
             <h1>Fill in some info about this location.</h1>
-            Old main is the building of old main at asu 
+            This is a test for Milestone3 of getting the AR features to recognize the ASU old main building
         </div>
         <div id="nft-marker2-info" class="info-pane">
             <h1>Fill in some info about this location.</h1>
