--- a/explore_img.html
+++ b/explore_img.html
@@ -25,16 +25,19 @@
         <!-- Fill in the content BELOW this line -->
 
         <div id="nft-marker1-info" class="info-pane" >
-            <h1>Fill in some info about this location.</h1>
-            Copy this link to access a video on how to make homemade hand sanitizer
+            <h1>Info About Homemade Handsanitizer</h1>
+            To learn more about the process of making your own handsanitizer at home you can click on the text below to access the youtube video. 
+            <a href="https://www.youtube.com/watch?v=gVoHJX0utAE">Hand Sanitizer Video Link</a>
         </div>
         <div id="nft-marker2-info" class="info-pane">
-            <h1>Fill in some info about this location.</h1>
-            hayden library is where alot of students go to study and do their homework
+            <h1>Info about Homemade Bacterial Wipes</h1>
+            To learn more about the process of making your own bacterial wipes at home you can click on the text below to access the youtube video.
+            <a href="https://www.youtube.com/watch?v=Fi4ReIwtHEE&t=1s">Bacterial Wipe Video Link</a>
         </div>
         <div id="nft-marker3-info" class="info-pane">
-            <h1>Fill in some info about this location.</h1>
-            ASU Gammage is a building that I have never been too.
+            <h1>Info about Homemade Facial Coverings</h1>
+            To learn more about the process of making your own facial coverings at home you can click on the text below to access the youtube video.
+            <a href="https://www.youtube.com/watch?v=gINNCYw1agc">Facial Covering Video link</a>
         </div>
 
         <!-- Fill in the content ABOVE this line -->
